--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "test:types": "tsc --noEmit --skipLibCheck"
   },
   "peerDependencies": {
-    "mkdist": "^1.5.4"
+    "mkdist": "^1.5.4",
+    "vue": "^3.4.38",
+    "vue-tsc": "^2.0.29"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.2",
@@ -43,11 +45,14 @@
     "eslint": "^9.9.1",
     "jiti": "2.0.0-beta.3",
     "mkdist": "^1.5.4",
+    "modern-normalize": "^3.0.0",
     "pathe": "^1.1.2",
     "sass": "^1.77.8",
     "typescript": "^5.5.4",
     "unbuild": "^v3.0.0-rc.7",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "vue": "^3.4.38",
+    "vue-tsc": "^2.0.29"
   },
   "publishConfig": {
     "access": "public"
