--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
       "optional": true
     }
   },
+  "dependencies": {
+    "pathe": "^1.1.2"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^3.0.0",
     "@types/node": "^20",
@@ -55,7 +58,6 @@
     "jiti": "2.0.0-beta.3",
     "mkdist": "^1.5.5",
     "modern-normalize": "^3.0.0",
-    "pathe": "^1.1.2",
     "sass": "^1.77.8",
     "typescript": "^5.5.4",
     "unbuild": "^v3.0.0-rc.7",
