--- a/package.json
+++ b/package.json
@@ -50,19 +50,19 @@
     "pathe": "^1.1.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.4.1",
+    "@antfu/eslint-config": "^3.7.3",
     "@types/node": "^20",
-    "@vitest/coverage-v8": "^2.0.5",
-    "changelogen": "^0.5.5",
-    "eslint": "^9.10.0",
-    "jiti": "2.0.0-beta.3",
-    "mkdist": "^1.5.6",
+    "@vitest/coverage-v8": "^2.1.2",
+    "changelogen": "^0.5.7",
+    "eslint": "^9.12.0",
+    "jiti": "2.3.1",
+    "mkdist": "^1.6.0",
     "modern-normalize": "^3.0.1",
-    "sass": "^1.78.0",
+    "sass": "^1.79.4",
     "typescript": "^5.5.4",
     "unbuild": "^v3.0.0-rc.7",
-    "vitest": "^2.0.5",
-    "vue": "^3.5.3",
+    "vitest": "^2.1.2",
+    "vue": "^3.5.11",
     "vue-tsc": "^2.1.6"
   },
   "publishConfig": {
